// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterSection > snapshot test - closed state 1`] = `
<div>
  <details
    class="
        group border-b border-default
        last:border-0
      "
  >
    <summary
      class="
          flex cursor-pointer items-center justify-between py-6 font-sans
          text-base font-semibold tracking-normal text-subtle
        "
    >
      <span
        class="flex items-center gap-2"
      >
        Genres
      </span>
      <svg
        aria-hidden="true"
        class="
            ml-auto size-3 transition-transform duration-300
            group-open:rotate-180
          "
        fill="currentColor"
        viewBox="0 0 12 8"
      >
        <path
          d="M12 6.5L10.5 8 6 3.5 1.5 8 0 6.5 6 0.5z"
        />
      </svg>
    </summary>
    <div
      class="overflow-hidden"
      style="transition: height 300ms cubic-bezier(0.2, 0.6, 0.4, 1); height: 0px;"
    >
      <div
        class="
            px-px pt-px pb-6 opacity-0 transition-opacity duration-300
            [[open]:not(.is-closing)_&]:opacity-100
            [[open]:not(.is-closing)_&]:delay-100
          "
      >
        <div>
          Filter content here
        </div>
      </div>
    </div>
  </details>
</div>
`;

exports[`FilterSection > snapshot test - open state (default) 1`] = `
<div>
  <details
    class="
        group border-b border-default
        last:border-0
      "
    open=""
  >
    <summary
      class="
          flex cursor-pointer items-center justify-between py-6 font-sans
          text-base font-semibold tracking-normal text-subtle
        "
    >
      <span
        class="flex items-center gap-2"
      >
        Genres
      </span>
      <svg
        aria-hidden="true"
        class="
            ml-auto size-3 transition-transform duration-300
            group-open:rotate-180
          "
        fill="currentColor"
        viewBox="0 0 12 8"
      >
        <path
          d="M12 6.5L10.5 8 6 3.5 1.5 8 0 6.5 6 0.5z"
        />
      </svg>
    </summary>
    <div
      class="overflow-hidden"
      style="transition: height 300ms cubic-bezier(0.2, 0.6, 0.4, 1);"
    >
      <div
        class="
            px-px pt-px pb-6 opacity-0 transition-opacity duration-300
            [[open]:not(.is-closing)_&]:opacity-100
            [[open]:not(.is-closing)_&]:delay-100
          "
      >
        <div>
          Filter content here
        </div>
      </div>
    </div>
  </details>
</div>
`;
